# scar

./: .gitignore  CMakeLists.txt  ScarCmd.msg  ScarStatus.msg  cleaning_test.ino  package.xml  scar_control.ino  setup.py  sketch_apr27b.ino  stairtest.ino
config/: scar_params.yaml
launch/: scar_full.launch.py  scar_manual.launch.py
msg/: ScarCmd.msg  ScarStatus.msg
ros2_ws/src/scar_bringup/launch/: scar_full.launch.py
ros2_ws/src/scar_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/scar_navigation/: CMakeLists.txt
ros2_ws/src/scar_navigation/config/: nav2_params.yaml
ros2_ws/src/scar_navigation/launch/: navigation.launch.py
ros2_ws/src/scar_state_manager/src/: scar_state_manager.cpp
ros2_ws/src/scar_vision/: .gitignore  package.xml  setup.cfg
ros2_ws/src/scar_vision/scar_vision/: person_node.py  stair_node.py
ros2_ws/src/stair_mapping/stair_mapping/: package.xml
ros2_ws/src/stair_mapping/stair_mapping/src/: map_cleaner_node.cpp
scar_vision/: stair_node.py
src/: scar_state_manager.cpp  scar_state_manager_real.cpp
stair_mapping/: CMakeLists.txt
stair_mapping/launch/: stair_nav.launch.py
stair_mapping/params/: stvl_params.yaml
stair_mapping/src/: stair_mapping_node.cpp
