<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scar_bringup</name>
  <version>1.0.0</version>
  <description>SCAR system bringup — launches all packages together</description>
  <maintainer email="todo@todo.com">scar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>scar_interfaces</exec_depend>
  <exec_depend>scar_vision</exec_depend>
  <exec_depend>scar_state_manager</exec_depend>
  <exec_depend>stair_mapping</exec_depend>
  <exec_depend>scar_navigation</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
